src/App.css
.App {
  text-align: center;
  background: #1a1b21;
  width: 317px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 0;
  font-weight: 400;
  font-size: 10.24px;
  line-height: 15px;
  color: #dcdcdc;
}

body {
  background: #23252c;
  font-family: "Inter";
  font-style: normal;
  font-weight: 700;
}
.my-pic {
  width: 317px;
  height: 317px;
  border-radius: 10px 10px 0px 0px;
}

.info .name {
  font-size: 25px;
  line-height: 30px;
  text-align: center;
  color: #fff;
  padding: 0;
  margin-bottom: 0;
}
.info .job-title {
  color: #f3bf99;
  font-size: 12.8px;
  margin: 0;
  margin-bottom: 9px;
}
.info a {
  text-decoration: none;
  color: #f5f5f5;
}

.section-title {
  font-size: 16px;
  line-height: 150%;
  /* or 24px */
  color: #f5f5f5;
  margin-bottom: 0;
}

.section-container {
  text-align: left;
  margin: 30px 35px;
}

.button {
  margin: 15px 5px;
}

.footer > a {
  margin: 20px 10px;
  padding: 0;
}

